[gd_scene load_steps=14 format=3 uid="uid://b478g6o8tgv7t"]

[ext_resource type="Script" path="res://units/base_unit.gd" id="1_p0uky"]
[ext_resource type="AudioStream" uid="uid://bctcosr8kpib1" path="res://assets/sounds/combat/attack-2.wav" id="2_ru3mt"]

[sub_resource type="ViewportTexture" id="ViewportTexture_nsxjv"]
viewport_path = NodePath("HealthBar/SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s08ob"]
bg_color = Color(0.894118, 0.239216, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5c24"]
bg_color = Color(0.0319146, 0.72616, 0.145515, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ieagd"]

[sub_resource type="BoxMesh" id="BoxMesh_a4cmv"]
size = Vector3(0.7, 0.7, 0.7)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kx4cd"]
transparency = 1
albedo_color = Color(0, 0.715256, 0.718173, 0.509804)

[sub_resource type="Animation" id="Animation_my3oe"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:rotation:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:rotation:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(6.28319, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body:rotation:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_bj726"]
resource_name = "attack"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.436332, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(6.28319, -0.25, 0, 0.25, 0, 6.28319, -0.25, 0, 0.25, 0, 6.28319, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="Animation" id="Animation_2pihk"]
resource_name = "bob"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2)
}

[sub_resource type="Animation" id="Animation_1v54j"]
resource_name = "spin"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 6.28319, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wv110"]
_data = {
"RESET": SubResource("Animation_my3oe"),
"attack": SubResource("Animation_bj726"),
"bob": SubResource("Animation_2pihk"),
"spin": SubResource("Animation_1v54j")
}

[node name="Base Unit" type="Node3D"]
script = ExtResource("1_p0uky")
unit_name = "Base Unit"
unit_id = "base_unit"
max_health = 1000.0
attack_speed = 0.5
attack_damage = 80.0
health = 1000.0
attack_range = 3

[node name="Labels" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="LevelLabel" type="Label3D" parent="Labels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0383576, -0.540825, 0.024584)
visible = false
text = "-"
font_size = 30
outline_size = 30

[node name="HealthBar" type="Node3D" parent="."]

[node name="HealthBarSprite" type="Sprite3D" parent="HealthBar"]
texture = SubResource("ViewportTexture_nsxjv")

[node name="SubViewport" type="SubViewport" parent="HealthBar"]
transparent_bg = true
size = Vector2i(100, 20)
render_target_update_mode = 4

[node name="HealthProgressBar" type="ProgressBar" parent="HealthBar/SubViewport"]
visible = false
offset_right = 100.0
offset_bottom = 20.0
theme_override_styles/background = SubResource("StyleBoxFlat_s08ob")
theme_override_styles/fill = SubResource("StyleBoxFlat_v5c24")
value = 100.0
show_percentage = false

[node name="Body" type="Area3D" parent="."]
transform = Transform3D(1, 0, 4.46638e-06, 0, 1, 0, -4.46638e-06, 0, 1, 0, 0, 0)
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)
shape = SubResource("BoxShape3D_ieagd")

[node name="HealthBarAnchorPoint" type="Node3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)

[node name="BodyMesh" type="MeshInstance3D" parent="Body"]

[node name="WeaponMesh" type="MeshInstance3D" parent="Body"]

[node name="FrozenMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0311094, 0)
visible = false
mesh = SubResource("BoxMesh_a4cmv")
surface_material_override/0 = SubResource("StandardMaterial3D_kx4cd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wv110")
}

[node name="AttackAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_ru3mt")
